@@ -1,178 +1,105 @@
-# Meowdoku Java 网页版实施计划
-
-> **For agentic workers:** 实施时按任务顺序执行，使用测试驱动开发，并在每个阶段重新运行完整测试。
-
-**Goal:** 保留现有 Java 游戏结构和控制台入口，新增可在浏览器中游玩的 `4×4` 至 `9×9` Meowdoku。
-
-**Architecture:** Java 继续负责 solution、区域、提示、猜测判定和计分。JDK 自带的 `HttpServer` 同源提供网页与 HTTP API；浏览器负责彩色棋盘、交互和本地排除标记。网页输入通过 `BrowserPlayer.makeGuess()` 接入现有 `Player` 多态结构。
-
-**Tech Stack:** Java 17、JDK `HttpServer`、HTML、CSS、原生 JavaScript；不添加第三方依赖。
+# Meowdoku 现场公网版本计划
 
 ## Summary
 
-- 运行 `WebMain` 后访问 `http://localhost:8080`。
-- 保留原来的 `Main` 控制台玩法。
-- 网页采用温暖猫咪手账风格，并支持手机和键盘操作。
-- 第一阶段只实现本地单人网页；Docker、Render、自定义域名和公网多访客会话留到后续阶段。
+- 保留现有 `GameBoard`、`generateSolution()`、区域扩张和 BFS。
+- 玩家点击开始时，由服务器在当前 HTTP 请求中实时生成棋盘。
+- 移除全局唯一的 `ActiveGame`，改成每个浏览器 Cookie 会话拥有独立游戏。
+- 支持 4×4–9×9、刷新恢复、20–50 人并发和手机触控。
+- 使用单个付费 Render 实例部署一周，通过 Cloudflare 域名访问。
 
-## Task 1: 复用现有游戏回合
+## 1. 独立游戏会话
 
-### BrowserPlayer
-
-- 新增 `BrowserPlayer extends Player`。
-- `setNextGuess(Position)` 保存 HTTP 收到的下一次猜测。
-- `makeGuess()` 返回并清除该猜测。
-- 没有待处理猜测时调用 `makeGuess()`，抛出明确的 `IllegalStateException`。
-
-网页回合流程：
+在 `WebMain` 中增加会话存储：
 
 ```text
-浏览器点击格子
-→ HTTP 创建 Position
-→ BrowserPlayer.setNextGuess(position)
-→ MeowdokuGame.playTurn()
-→ BrowserPlayer.makeGuess()
-→ GameBoard.checkGuess()
-→ Player.recordGuess()
+ConcurrentHashMap<sessionId, GameSession>
 ```
 
-### MeowdokuGame
+每个 `GameSession` 保存 `BrowserPlayer`、`MeowdokuGame`、最后访问时间和一个稳定的会话锁。
 
-- 增加 `start()`：只在第一次调用时揭示免费猫并调用 `recordRevealedCat()`；重复调用不重复计数。
-- 增加 `playTurn()`：调用 `player.makeGuess()`、`board.checkGuess()` 和 `player.recordGuess()`，返回 `GuessResult`。
-- 增加 `isComplete()`。
-- 控制台 `play()` 改为复用 `start()` 和 `playTurn()`。
+- Session ID 使用 `SecureRandom` 生成 32 字节随机值。
+- Cookie 名称为 `meowdoku_session`。
+- Cookie 设置 `Path=/; HttpOnly; SameSite=Lax; Max-Age=28800`，公网环境增加 `Secure`。
+- 使用 8 小时滑动过期；API 成功访问时刷新有效期。
+- 最多保存 500 个 session；创建新 session 时清理过期项。
+- 达到上限且没有过期项时，新玩家收到 `503`，现有玩家不受影响。
+- Cookie 缺失、伪造或过期时，读取游戏和猜测返回 `404`。
+- 静态资源和 `/health` 不创建 session。
+- 同一浏览器的普通标签页共享游戏；隐私窗口、其他浏览器和其他设备拥有不同游戏。
+- Render 重启后内存游戏会消失，前端返回开局页面。
 
-### 只读状态接口
+同一 session 的开局、读取和猜测使用同一把锁串行执行；不同 session 可以并行，避免 `BrowserPlayer.nextGuess` 被覆盖。
 
-- `Player` 增加 `getGuesses()` 和 `getCatsFound()`。
-- `GameBoard` 增加 `getSize()`、`getRegionId(row, column)` 和 `getCellState(row, column)`。
-- 不增加任何可读取隐藏猫位置或完整 `solution` 的接口。
+## 2. HTTP API 与前端
 
-## Task 2: Java 网页服务
+### API
 
-- 新增 `WebMain`，使用 `com.sun.net.httpserver.HttpServer`。
-- 本地默认监听 `127.0.0.1:8080`。
-- 如果存在 `PORT` 环境变量，则监听该端口并绑定 `0.0.0.0`，为后续公网部署预留。
-- 固定提供 `web/index.html`、`web/styles.css` 和 `web/app.js`；不接受任意文件路径。
-- 第一阶段服务器只维护一盘当前游戏。刷新页面可恢复当前服务器状态，Java 进程重启后重新开始。
+- `POST /api/game?size=n`：接受 4–9，同步创建并启动游戏，成功后才替换旧游戏；非法尺寸或生成失败不得破坏旧游戏；返回 `200`，不使用后台任务或 `202`。
+- `GET /api/game`：根据 Cookie 恢复当前可见状态，没有有效游戏时返回 `404`。
+- `POST /api/guess?row=r&column=c`：只操作当前 Cookie 对应的游戏，保留现有 `BrowserPlayer.setNextGuess()`、`makeGuess()` 和 `playTurn()` 流程。
 
-### HTTP API
+所有 JSON 继续只包含可见棋盘状态，绝不返回隐藏 `solution` 或 session ID。
 
-#### `POST /api/game?size=5`
+服务器增加：
 
-- 只接受整数 `4–9`。
-- 创建 `BrowserPlayer` 和 `MeowdokuGame`。
-- 调用 `game.start()`。
-- 返回完整的可见游戏状态。
+- 16 个线程、128 个排队任务的有界执行器。
+- Shutdown hook，关闭 HTTP server 和执行器。
+- `PUBLIC_ORIGIN` 精确检查公网写请求，不开放 CORS。
+- `Content-Security-Policy`、`X-Content-Type-Options`、禁止 iframe 等基础安全头。
+- API 保持 `Cache-Control: no-store`。
+- 未预料异常返回通用 `500` JSON；日志不记录 Cookie 或完整 session ID。
 
-#### `GET /api/game`
+### 前端
 
-- 返回当前可见游戏状态。
-- 没有当前游戏时返回 `404` JSON。
+- 页面加载时调用 `GET /api/game`：`200` 恢复棋盘、分数、生命和已确认格子；`404` 显示尺寸选择页面，不自动创建新游戏。
+- 开局期间显示 “Generating puzzle…” 并阻止重复提交。
+- 保留单击标记、同格双击猜猫：单击等待 280ms 后切换标记，280ms 内同格第二次点击取消标记并只提交一次猜测；Space 标记，Enter 猜猫。
+- 本地排除标记不上传服务器，刷新后清空。
+- 保留 `touch-action: manipulation`，防止手机双击缩放。
 
-#### `POST /api/guess?row=2&column=3`
+## 3. 测试与验收
 
-- 验证行列为整数并位于棋盘范围内。
-- 调用 `browserPlayer.setNextGuess(new Position(row, column))`。
-- 调用 `game.playTurn()`。
-- 返回猜测结果和更新后的游戏状态。
+### 自动测试
 
-#### `GET /health`
+- 使用两个独立 Cookie 客户端验证 A 的 4×4 和 B 的 9×9 互不覆盖。
+- 验证同一 Cookie 刷新后，尺寸、分数、生命、猫和错误格子保持一致。
+- 验证无效、伪造、过期 Cookie 返回 `404`。
+- 验证同一 session 的两个并发猜测被正确串行处理。
+- 验证 500 session 上限、8 小时过期和 Cookie 安全属性。
+- 对 4–9 重复生成并验证每行/列一只猫、猫不接触、区域 ID 合法、所有格子已分配、每个区域存在且包含一只猫。
+- JavaScript 测试覆盖单击、双击、不同格快速点击、busy/game-over 和键盘输入。
+- 保留并运行所有现有 Java 与 JavaScript 测试。
 
-- 返回 `200` 和简单健康状态。
+### 并发烟测
 
-### JSON 状态
+- 新增独立 Java 烟测程序，使用 50 个独立 `CookieManager`。
+- 每个用户同步开局、GET 恢复、猜测一次、再次 GET，连续运行两轮。
+- 验收：50/50 成功；无跨 session 污染；无意外 `5xx`、JSON 错误或超时；预热后开局 p95 ≤ 5 秒、最大 ≤ 10 秒，猜测 p95 ≤ 2 秒。
+- 使用 Android Chrome 和 iOS Safari 分别测试 4×4、9×9：单击只标记、双击只猜一次、不缩放页面。
 
-响应包含：
+## 4. Render 与 Cloudflare
 
-- `size`
-- `score`
-- `guesses`
-- `catsFound`
-- `complete`
-- `message`
-- `board`：每格只包含 `regionId` 和可见 `CellState`
+新增 Java 17 多阶段 `Dockerfile`、`.dockerignore` 和 `render.yaml`：
 
-响应不能包含 `solution` 或隐藏猫位置。
+- Docker 构建阶段编译 Java，运行阶段复制 class 与 `web/`。
+- 服务读取 Render 提供的 `PORT` 并绑定 `0.0.0.0`。
+- Render 使用 `starter` 付费实例、`singapore` 区域、单实例。
+- 健康检查路径为 `/health`。
+- `autoDeployTrigger: off`，活动期间只手动部署已测试版本。
+- 设置 `SESSION_COOKIE_SECURE=true` 和最终的 `PUBLIC_ORIGIN`。
 
-## Task 3: 网页 UI
+Render 配置参考 [Blueprint 文档](https://render.com/docs/blueprint-spec)、[Web Service 文档](https://render.com/docs/web-services)和[健康检查文档](https://render.com/docs/health-checks)。
 
-### 页面结构
+Cloudflare：先在 Render 添加活动子域名；创建指向 Render 子域名的 Proxied CNAME；SSL/TLS 使用 Full (strict)；`/api/*` 不缓存。配置参考 [Cloudflare 的 Render 指南](https://developers.cloudflare.com/cloudflare-for-platforms/cloudflare-for-saas/saas-customers/provider-guides/render/)。
 
-- 尺寸选择 `4–9`。
-- `Start New Game` 和重新开始按钮。
-- 分数、猜测次数和已找到猫数量。
-- 简短规则说明。
-- 响应式正方形棋盘。
-- 游戏完成成绩卡。
-
-### 棋盘显示
-
-- 九个 `regionId` 映射到九种柔和颜色。
-- 根据相邻格子的 `regionId` 添加粗区域边界，不能只依靠颜色区分。
-- 已找到或免费揭示的猫显示 `🐱`。
-- 服务器确认的错误猜测显示红色 `×`。
-
-### 操作模式
-
-- `Guess Cat`：点击格子后调用 `/api/guess`。
-- `Mark Empty`：只在浏览器中切换灰色 `×`，不发送请求、不扣分。
-- 本地标记使用 `row,column` 作为键。
-- 对已被服务器判定的格子清除本地标记。
-- 开始新游戏时清除全部本地标记。
-
-### 可用性
-
-- 每个格子使用 `<button>`。
-- 支持 Enter、Space、清晰焦点样式和描述性 `aria-label`。
-- 正确猜测使用轻微弹跳，错误猜测使用轻微摇动。
-- 遵守 `prefers-reduced-motion`。
-- 手机宽度下棋盘不得横向溢出。
-
-## Task 4: 测试与验收
-
-### Java 单元测试
-
-- 保留并运行所有现有测试。
-- 验证 `BrowserPlayer.setNextGuess()` 后，`makeGuess()` 返回同一个 `Position` 并清除待处理状态。
-- 验证没有待处理猜测时 `makeGuess()` 抛出 `IllegalStateException`。
-- 验证控制台玩家和 `BrowserPlayer` 都通过 `playTurn()` 完成判定与计分。
-- 验证 `start()` 重复调用不会重复揭示、计分或增加找到的猫。
-
-### HTTP 集成测试
-
-- 首页、静态资源和 `/health` 返回 `200`。
-- 尺寸 `3`、`10`、非整数和多个数值返回 `400`。
-- 没有游戏时读取或猜测返回明确错误。
-- 越界坐标返回 `400`。
-- 合法猜测更新分数、次数、格子状态和完成状态。
-- JSON 不包含 `solution` 或任何隐藏猫信息。
-
-### 手动验收
-
-- 完成一局 `4×4`、`5×5` 和 `9×9`。
-- 验证刷新后当前游戏仍存在。
-- 验证新游戏清除旧棋盘和浏览器标记。
-- 验证猜猫和标记排除两种模式。
-- 验证手机宽度与键盘操作。
-
-## Build and Run
-
-```powershell
-javac --add-modules jdk.httpserver -d out *.java
-java --add-modules jdk.httpserver -cp out WebMain
-```
-
-浏览器访问：
-
-```text
-http://localhost:8080
-```
+活动前 30 分钟从正式域名检查 `/health`，分别创建一次 4×4–9×9 游戏，运行两轮 50 用户烟测并完成两台真机触控测试。保留上一个成功 Render deploy 作为回滚版本。活动结束后删除或降级付费服务并清理 DNS。
 
 ## Assumptions
 
-- 继续使用 Java 17 和默认 package。
-- 不引入 Maven、Gradle、Spring、前端框架或 JSON library。
-- 第一阶段不加入账号、数据库、排行榜、多人游戏或永久存档。
-- 公网发布和自定义域名在本地 UI 稳定后单独规划。
+- 本次保留现有实时生成算法，不增加唯一解求解器，因此不承诺每个颜色棋盘只有一个逻辑答案。
+- Session 隔离只解决不同玩家互相覆盖的问题。
+- 不加入数据库、账号、排行榜或永久存档。
+- 只运行一个 Render 实例；水平扩容前必须增加共享 session 存储。
+- 控制台入口 `Main` 保持不变。
+- README 记录本地运行、Docker、部署、烟测、session 行为和上述限制。
